Fix masonry alignment - make it fit to container

--- a/sources/style/frontend/_includes/_functions.styl
+++ b/sources/style/frontend/_includes/_functions.styl
@@ -8,3 +8,7 @@ balc(size, add = 0)
 calc_sub(width, subtract)
 	width: 100%
 	width: "calc(100% - %s)" % (subtract)
+
+calc_add(width, subtract)
+	width: 100%
+	width: "calc(100% + %s)" % (subtract)
