--- a/sources/style/frontend/base/_PP_Masonry.styl
+++ b/sources/style/frontend/base/_PP_Masonry.styl
@@ -11,8 +11,8 @@ mason_width( $columns )
 // Masonry Entries
 //-----------------------------------*/
 .PP_Masonry
-	margin: $masonry_gutter_size
-	calc_sub(100%, $masonry_gutter_size*2)
+	margin-left: - $masonry_gutter_size
+	calc_add(100%, $masonry_gutter_size*2)
 	opacity: 1
 	transition: opacity 500ms ease
 
